# CARTopiaX

./: .clang-tidy  .gitignore  CARTopiaX_Simulation_Analysis.ipynb  CMakeLists.txt  README.md  bdm.toml  clang_output.txt  delete_me.py  main.cc  params.json
.github/workflows/: ci.yml  clang-format.yml
abm_calibration/: optimize.py  requirements.txt
python/: pyproject.toml  setup.cfg
python/cartopiaX/: __init__.py  _bootstrap.py  behavior.py  params.py  simulation.py
python/cartopiaX.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
python/tests/: conftest.py  test_behavior.py  test_integration.py  test_params.py
src/: cart_cell.cc  cart_cell.h  cart_tumor.cc  cart_tumor.h  diffusion_thomas_algorithm.cc  diffusion_thomas_algorithm.h  forces_tumor_cart.cc  forces_tumor_cart.h  hyperparams.cc  hyperparams.h  tumor_cell.cc  tumor_cell.h  utils_aux.cc  utils_aux.h
test/: test_notebook_plot3division.py
